forside ikke done test

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="forside_img_relative">
         <img class="forside_img" src="img/Chum_forside.webp" alt="billede af chums vin og ost" />
         <div class="forside_h1_p_absolute">
-          <h1>CHUMS 2</h1>
+          <h1 class="forside_h1">CHUMS</h1>
           <p>Vinbar & Bistro</p>
         </div>
       </div>
