--- a/events.html
+++ b/events.html
@@ -22,7 +22,7 @@
         <ul class="menu">
           <li><a href="menukort.html">Menu</a></li>
           <li><a href="bord.html">Booking</a></li>
-          <li><a href="events.html">Events</a></li>
+          <li><a href="events.html" class="nav-link active">Events</a></li>
         </ul>
         <div class="burger">
           <div class="line"></div>
