--- a/menukort.html
+++ b/menukort.html
@@ -24,7 +24,7 @@
         </a>
         <nav>
             <ul class="menu">
-                <li><a href="menukort.html">Menu</a></li>
+                <li><a href="menukort.html"class="nav-link active">Menu</a></li>
                 <li><a href="bord.html">Booking</a></li>
                 <li><a href="events.html">Events</a></li>
             </ul>
