--- a/produkt.html
+++ b/produkt.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Produktside</title>
-    <link rel="stylesheet" href="produkt.css">
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="produkt.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <a href="index.html">
-            <img src="img/logo.webp" alt="Logo" class="logo" />
-        </a>
-        <nav>
-            <ul class="menu">
-                <li><a href="menukort.html">Menu</a></li>
-                <li><a href="bord.html">Booking</a></li>
-                <li><a href="events.html">Events</a></li>
-            </ul>
-            <div class="burger">
-                <div class="line"></div>
-                <div class="line"></div>
-                <div class="line"></div>
-            </div>
-        </nav>
+      <a href="index.html">
+        <img src="img/logo.webp" alt="Logo" class="logo" />
+      </a>
+      <nav>
+        <ul class="menu">
+          <li><a href="menukort.html">Menu</a></li>
+          <li><a href="bord.html">Booking</a></li>
+          <li><a href="events.html">Events</a></li>
+        </ul>
+        <div class="burger">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </div>
+      </nav>
     </header>
     <main id="productContainer">
-        <!-- <div class="grid_1_1_produkt">
+      <!-- <div class="grid_1_1_produkt">
             <div class="produkt_intro">
                 <h1>Wine tasting</h1>
                 <p>Location: Nørre Farimagsgade 82, 1364 København</p>
@@ -56,31 +61,30 @@
         </div> -->
     </main>
     <footer>
-        <h2>Join our newsletter</h2>
-        <h3>Stay up to date when our january sale goes live, new events and much more!</h3>
+      <h2>Join our newsletter</h2>
+      <h3>Stay up to date when our january sale goes live, new events and much more!</h3>
 
-        <form class="sign-up">
-            <input type="email" placeholder="Be a part of our wine loving community" class="search-input" id="email" />
-            <button class="sign-up-button">Sign up</button>
-        </form>
+      <form class="sign-up">
+        <input type="email" placeholder="Be a part of our wine loving community" class="search-input" id="email" />
+        <button class="sign-up-button">Sign up</button>
+      </form>
 
-        <div class="footer-nederst">
-            <div class="kontakt">
-                <p>Telephone:<a href="tel:+4526234784"> +45 26 23 47 84</a></p>
-                <p>Email: <a href="mailto:christian@chums.dk">christian@chums.dk</a></p>
-                <p>Instagram:<a href="https://www.instagram.com/chums.winebar/"> @chums.winebar</a></p>
-                <p>Facebook:<a href="https://www.facebook.com/Chums.dk">Chums vinbar og bistro </a></p>
-            </div>
-
-            <div class="rapport">
-                <img src="./img/smileyrapport.webp" alt="smileyrapport billede" />
-                <p>Smiley rapport</p>
-                <p>© 2025 Chums Vinbar & Bistro</p>
-            </div>
+      <div class="footer-nederst">
+        <div class="kontakt">
+          <p>Telephone:<a href="tel:+4526234784"> +45 26 23 47 84</a></p>
+          <p>Email: <a href="mailto:christian@chums.dk">christian@chums.dk</a></p>
+          <p>Instagram:<a href="https://www.instagram.com/chums.winebar/"> @chums.winebar</a></p>
+          <p>Facebook:<a href="https://www.facebook.com/Chums.dk">Chums vinbar og bistro </a></p>
         </div>
+
+        <div class="rapport">
+          <img src="./img/smileyrapport.webp" alt="smileyrapport billede" />
+          <p>Smiley rapport</p>
+          <p>© 2025 Chums Vinbar & Bistro</p>
+        </div>
+      </div>
     </footer>
     <script src="menu.js"></script>
     <script src="produkt.js"></script>
-</body>
-
+  </body>
 </html>
