menukort filter knapper næsten done

--- a/drinkskort.html
+++ b/drinkskort.html
@@ -39,14 +39,14 @@
     <main>
 
         <div class="menu_knap_flex">
-            <a class="hvid_knap_menu" href="menukort.html">Wine</a>
-            <a class="hvid_knap_menu" href="madkort.html">Food</a>
-            <a class="hvid_knap_menu" href="drinkskort.html">Drinks & Soft drinks</a>
+            <a class="forside_button" href="menukort.html">Wine</a>
+            <a class="forside" href="madkort.html">Food</a>
+            <a class="forside_button" href="drinkskort.html">Drinks & Soft drinks</a>
         </div>
 
         <div class="filter_buttons">
-            <button class="filter_knap">Drinks</button>
-            <button class="filter_knap">Soft Drinks</button>
+            <a class="filter_knap" href="#drinks">Drinks</a>
+            <a class="filter_knap" href="#soft">Soft Drinks</a>
         </div>
 
 
@@ -56,7 +56,7 @@
             <div class="grid_1-1_drinks">
 
                 <!--------------- COCKTAILS --------------->
-                <div>
+                <div id="drinks">
                     <h2>Drinks</h2>
                     <ul>
                         <li>
@@ -163,7 +163,7 @@
                 </div>
             </div>
             <!----------------- SOFT DRINKS ---------------->
-            <div>
+            <div id="soft">
                 <h2>Soft drinks</h2>
 
                 <ul>
