--- a/madkort.html
+++ b/madkort.html
@@ -39,25 +39,24 @@
     <main>
 
         <div class="menu_knap_flex">
-            <a class="hvid_knap_menu" href="menukort.html">Wine</a>
-            <a class="hvid_knap_menu" href="madkort.html">Food</a>
-            <a class="hvid_knap_menu" href="drinkskort.html">Drinks & Soft drinks</a>
+            <a class="forside_button" href="menukort.html">Wine</a>
+            <a class="forside_button" href="madkort.html">Food</a>
+            <a class="forside_button" href="drinkskort.html">Drinks & Soft drinks</a>
         </div>
 
         <div class="filter_buttons">
-            <button class="filter_knap">Snacks</button>
-            <button class="filter_knap">Charcuterie</button>
-            <button class="filter_knap">Warm Cheese</button>
-            <button class="filter_knap">Others</button>
-            <button class="filter_knap">Dessert</button>
+            <a class="filter_knap" href="#snacks">Snacks</a>
+            <a class="filter_knap" href="#cheese">Warm Cheese</a>
+            <a class="filter_knap" href="#charcuterie">Charcuterie</a>
+            <a class="filter_knap" href="#others">Others</a>
+            <a class="filter_knap" href="#dessert">Dessert</a>
         </div>
-
 
         <!------------------------------------------- FOOD MENU ----------------------------------------------------------->
         <div class="menu_section">
             <h1>Food Menu</h1>
             <!------------------- SNACKS ------------------->
-            <div class="snacks_section">
+            <div id="snacks">
                 <h2>SNACKS</h2>
                 <ul>
                     <li class="menu_item">
@@ -100,7 +99,7 @@
                     <img class="cheese_img" src="img/menukort2.webp" alt="billede af ostefondue">
                 </div>
                 <!----------------- WARM CHEESE ------------------->
-                <div class="warm_cheese_section">
+                <div id="cheese">
                     <h2>WARM CHEESE</h2>
                     <ul>
                         <li class="menu_item">
@@ -146,7 +145,7 @@
             </div>
 
             <!--------------- CHARCUTERIE ------------------->
-            <div class="charcuterie_section">
+            <div id="charcuterie">
                 <h2>CHARCUTERIE</h2>
 
                 <ul>
@@ -212,7 +211,7 @@
 
             <!------------------- OTHERS ---------------->
             <div class="grid_1-1_others">
-                <div class="others_section">
+                <div id="others">
                     <h2>OTHERS</h2>
                     <ul>
                         <li class="menu_item">
@@ -321,7 +320,7 @@
 
 
             <!-------------- DESSERT ----------->
-            <div class="dessert_section">
+            <div id="dessert">
                 <h2>DESSERT</h2>
                 <ul>
                     <li class="menu_item">
