--- a/menukort.html
+++ b/menukort.html
@@ -38,17 +38,16 @@
 
     <main>
         <div class="menu_knap_flex">
-            <a class="hvid_knap_menu" href="menukort.html">Wine</a>
-            <a class="hvid_knap_menu" href="madkort.html">Food</a>
-            <a class="hvid_knap_menu" href="drinkskort.html">Drinks & Soft drinks</a>
+            <a class="forside_button" href="menukort.html">Wine</a>
+            <a class="forside_button" href="madkort.html">Food</a>
+            <a class="forside_button" href="drinkskort.html">Drinks & Soft drinks</a>
         </div>
 
         <div class="filter_buttons">
-            <button class="filter_knap" data-filter="all">Show all</button>
-            <button class="filter_knap" data-filter="red">Red Wine</button>
-            <button class="filter_knap" data-filter="white">White Wine</button>
-            <button class="filter_knap" data-filter="sweet">Sweet Wine & Rosé</button>
-            <button class="filter_knap" data-filter="sparkling">Sparkling</button>
+            <a class="filter_knap" href="#red">Red Wine</a>
+            <a class="filter_knap" href="#white">White Wine</a>
+            <a class="filter_knap" href="#sweet">Rosé & Sweet</a>
+            <a class="filter_knap" href="#sparkling">Sparkling</a>
         </div>
 
         <!-------------------------------------------- WINE MENU --------------------------------------------------------------->
@@ -56,7 +55,7 @@
             <h1>Wine Menu</h1>
             <!------------------ AUSTRALIA ------------------->
 
-            <div data-wine="red">
+            <div id="red">
                 <h2 class="menu_item">Australia</h2>
                 <ul>
                     <li class="menu_item">
@@ -95,7 +94,7 @@
             </div>
 
             <!---------------- BULGARIA ----------------->
-            <div data-wine="red">
+            <div>
                 <h2 class="menu_item">Bulgaria</h2>
                 <ul>
                     <li class="menu_item">
@@ -109,7 +108,7 @@
             </div>
 
             <!---------------- FRANCE ----------------->
-            <div data-wine="red">
+            <div>
                 <h2 class="menu_item">France</h2>
                 <ul>
                     <li class="menu_item">
@@ -131,7 +130,7 @@
             </div>
 
             <!--------------- GERMANY --------------->
-            <div data-wine="red">
+            <div>
                 <h2 class="menu_item">Germany</h2>
                 <ul>
                     <li class="menu_item">
@@ -147,14 +146,14 @@
             <!----------------- IMG ITALY ------------------>
 
 
-            <div class="grid_1-2" data-wine="red">
+            <div class="grid_1-2">
                 <div class="menu_item">
                     <img class="italy_img1" src="img/italy_1.webp" alt="billede af italiensk vinmark og en vin">
                     <img class="italy_img2" src="img/italy_2.webp" alt="billede af hånd de rholder en italiensk vin">
                 </div>
 
                 <!--------------- ITALY --------------->
-                <div class="italy_section" data-wine="red">
+                <div class="italy_section">
                     <h2 class="menu_item">Italy</h2>
                     <ul>
                         <li class="menu_item">
@@ -279,7 +278,7 @@
                     </ul>
                 </div>
             </div>
-            <div data-wine="red">
+            <div>
                 <ul>
                     <li class="menu_item">
                         <div class="menu_left">
@@ -317,7 +316,7 @@
 
 
             <!--------------- LEBANON --------------->
-            <div data-wine="red">
+            <div>
                 <h2 class="menu_item">Lebanon</h2>
                 <ul>
                     <li class="menu_item">
@@ -339,7 +338,7 @@
             </div>
 
             <!------------- MOLDOVA ------------->
-            <div data-wine="red">
+            <div>
                 <h2 class="menu_item">Maldova</h2>
                 <ul>
                     <li class="menu_item">
@@ -361,7 +360,7 @@
             </div>
 
             <!---------------- ROMANIA -------------->
-            <div data-wine="red">
+            <div>
                 <h2 class="menu_item">Romania</h2>
                 <ul>
                     <li class="menu_item">
@@ -383,7 +382,7 @@
             </div>
 
             <!---------------- RHONE ----------------->
-            <div class="grid_1-1" data-wine="red">
+            <div class="grid_1-1">
                 <div class="rhone_section">
                     <h2 class="menu_item">Rhone</h2>
                     <ul>
@@ -534,7 +533,7 @@
             </div>
 
             <!-------------- IMG SPAIN -------------->
-            <div class="grid_1-1_spain" data-wine="red">
+            <div class="grid_1-1_spain">
                 <div>
                     <img class="spain_img" src="img/spain.webp" alt="billede af bord med vin og vinkøler">
                 </div>
@@ -611,7 +610,7 @@
             </div>
 
             <!------------------ USA ------------------->
-            <div data-wine="red">
+            <div>
                 <h2 class="menu_item">USA</h2>
                 <ul>
                     <li class="menu_item">
@@ -635,7 +634,7 @@
 
             <!------------------ WHITE WINE --------------->
 
-            <div>
+            <div id="white">
                 <h2 class="menu_item">White wine</h2>
                 <ul>
                     <li class="menu_item">
@@ -766,7 +765,7 @@
             </div>
 
             <!------------------ ROSE --------------->
-            <div>
+            <div id="sweet">
                 <h2 class="menu_item">Rosé</h2>
                 <ul>
                     <li class="menu_item">
@@ -869,7 +868,7 @@
 
             <!------------------- SPARKLING ----------------->
 
-            <div>
+            <div id="sparkling">
                 <h2 class="menu_item">Sparkling</h2>
                 <ul>
                     <li class="menu_item">
@@ -933,27 +932,6 @@
             </div>
         </div>
     </footer>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const buttons = document.querySelectorAll('.filter_knap');
-            const sections = document.querySelectorAll('[data-wine]');
-
-            buttons.forEach(button => {
-                button.addEventListener('click', () => {
-                    const filter = button.dataset.filter;
-
-                    sections.forEach(section => {
-                        if (filter === 'all' || section.dataset.wine === filter) {
-                            section.classList.remove('hidden');
-                        } else {
-                            section.classList.add('hidden');
-                        }
-                    });
-                });
-            });
-        });
-
-    </script>
 </body>
 
 </html>
